# FuckETS

./: .gitignore  README.md  adapters.py  answer.py  config.py  example.env  listening_part.py  locate_images.py  login.py  main.py  pyproject.toml  requirements.txt  temp.py  utils.py
question_type/: based_question.py  speaking.py  word_to_chinese.py
runtime/: audio_device.pyobj  usage.pyobj
